removed old JS functions

--- a/SeniorProject_v01/app/templates/app/events2.html
+++ b/SeniorProject_v01/app/templates/app/events2.html
@@ -6,7 +6,7 @@
 
 <h2>Event Calendar</h2>
 
-<p>View upcoming events or <strong><a href="/filter">filter results</a></strong>.</p>
+<p>View upcoming events or <strong><a href="/search">filter results</a></strong>.</p>
 
 <!-- display the calender -->
 {{ month_table }}
