--- a/SeniorProject_v01/app/templates/app/search.html
+++ b/SeniorProject_v01/app/templates/app/search.html
@@ -12,7 +12,7 @@
 
     <form method="get">
         {{ filter.form.as_p }}
-        <button type="submit" class="btn btn-default waves-effect waves-light">Search</button>
+        <button type="submit" class="btn btn-default">Search</button>
     </form>
 
     <h1>Results</h1>
@@ -35,5 +35,14 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
+
+<div class="container">
+    <h1>Calendar with filtered events</h1>
+    <p></p>
+
+    <!-- display the calender -->
+    {{ month_table }}
+
 </div>
 {% endblock %}
