update calendar pages to correct EXTENDS structure

--- a/SeniorProject_v01/app/templates/app/calendar-ro.html
+++ b/SeniorProject_v01/app/templates/app/calendar-ro.html
@@ -1,16 +1,11 @@
-﻿{% load staticfiles %}
+﻿{% extends "app/layout.html" %}
 
-<!DOCTYPE html>
+{% load staticfiles %}
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-
-</head>
-
-<body>
+{% block content %}
 
 
-</body>
-</html>
+
+
+
+{% endblock %}
