--- a/SeniorProject_v01/app/templates/app/calendar-rw.html
+++ b/SeniorProject_v01/app/templates/app/calendar-rw.html
@@ -1,10 +1,11 @@
-﻿<!-- left side navigator -->
-<div style="float:left; width: 160px;">
-  <div id="nav"></div>
-</div>
+﻿{% extends "app/layout.html" %}
 
-<!-- calendar div -->
-<div style="margin-left: 160px;">
-  <div id="dp"></div>
-</div>
+{% load staticfiles %}
 
+{% block content %}
+
+
+
+
+
+{% endblock %}
