--- a/SeniorProject_v01/app/templates/app/calendar.html
+++ b/SeniorProject_v01/app/templates/app/calendar.html
@@ -1,20 +1,8 @@
-﻿{% load staticfiles %}
+﻿{% extends "app/layout.html" %}
 
-<!DOCTYPE html>
+{% load staticfiles %}
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>{{ title }}</title>
-
-    <!-- daypilot libraries and themes -->
-    <script src="{% static 'app/scripts/daypilot-all.min2.js' %}"></script>
-	<<link rel="stylesheet" type="text/css" href="{% static 'app/content/calendar_transparent.css' %}" />
-    <<link rel="stylesheet" type="text/css" href="{% static 'app/content/month_transparent.css' %}" />
-    <<link rel="stylesheet" type="text/css" href="{% static 'app/content/navigator_transparent.css' %}" />
-</head>
-
-<body>
+{% block content %}
 
     <!-- check user authentication and display proper page -->
     {% if user.is_authenticated %}
@@ -28,5 +16,4 @@
     {% endif %}
     
 
-</body>
-</html>
+{% endblock %}
