--- a/SeniorProject_v01/app/templates/tempocal/month.html
+++ b/SeniorProject_v01/app/templates/tempocal/month.html
@@ -1,5 +1,5 @@
-<table border="0" cellpadding="0" cellspacing="0" class="month">
-	<thead>
+<table border="0" cellpadding="0" cellspacing="0" class="month oafcal">
+    <thead>
 		{{ month_name_row }}
 		{{ week_header_row }}
 	</thead>
