started week on Sunday

--- a/SeniorProject_v01/app/templates/app/layout.html
+++ b/SeniorProject_v01/app/templates/app/layout.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
 
+
     {{ form.media }} <!-- needed for JS/GoogleMaps lookup from address package -->
 </head>
 
@@ -56,6 +57,8 @@
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
+
+    <script src="https://intercoolerreleases-leaddynocom.netdna-ssl.com/intercooler-1.1.1.min.js"></script>
 
 {% block scripts %}
 {% endblock %}
