--- a/SeniorProject_v01/app/templates/tempocal/month.html
+++ b/SeniorProject_v01/app/templates/tempocal/month.html
@@ -1,5 +1,4 @@
-<div class="oafcalMonth">
-<table border="0" cellpadding="0" cellspacing="0" class="oafcalMonth">		{{ month_name_row }}</table></div> 
+<h2 class="oafcalMonth">{{ month_name_row }}</h2>
 <table border="0" cellpadding="0" cellspacing="0" class="month oafcal">
     <thead>
 		{{ week_header_row }}
@@ -10,4 +9,3 @@
 	{% endfor %}
 	</tbody>
 </table>
-</div>
