--- a/SeniorProject_v01/app/static/app/content/site.css
+++ b/SeniorProject_v01/app/static/app/content/site.css
@@ -111,7 +111,8 @@ input[type="checkbox"].input-validation-error {
     .highlighted p {
         background-color: #009bff;
         border-radius: 20px;
-        
-        width: 20px;
+        margin-top:5px;
+        font-size: 20px;
+        width: 28px;
         box-shadow: 1px 2px 5px #99999a;
     }
