--- a/SeniorProject_v01/app/templates/app/search.html
+++ b/SeniorProject_v01/app/templates/app/search.html
@@ -10,39 +10,18 @@
         <h1>Search Events</h1>
     </div>
 
-    <form method="get">
-        {{ filter.form.as_p }}
-        <button type="submit" class="btn btn-default">Search</button>
-    </form> 
-
-    <h1>Results</h1>
-    <table class="striped highlight">
-        <thead>
-            <tr>
-                <td>Category</td>
-                <td>Name</td>
-                <td>Description</td>
-            </tr>
-        </thead>
-
-        <tbody>
-            {% for event in filter.qs %}
-                <tr>
-                    <td>{{ event.category }}</td>
-                    <td><a href="/event/{{event.id}}">{{ event.name }}</a></td>
-                    <td>{{ event.description|truncatesmart:90 }} </td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <form method="POST">
+        {% csrf_token %}
+        {{ filter.as_p }}
+        <button class="searchbutton" type="submit">
+            <i class="material-icons">search</i>
+        </button>
+    </form>
 </div>
 
 <div class="container">
-    <h1>Calendar with filtered events</h1>
-    <p></p>
-
     <!-- display the calender -->
     {{ month_table }}
-
 </div>
+
 {% endblock %}
