--- a/SeniorProject_v01/app/templates/app/error.html
+++ b/SeniorProject_v01/app/templates/app/error.html
@@ -2,13 +2,9 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
-        <h1>Error!</h1>
-    </div>
-    <div class="row">
-        <p>Sorry about that!<br />We can't make that work :(</p>
-    </div>
+<div class="jumbotron">
+    <h1>Error</h1>
+    <p>Sorry about that<br />We can't make that work :(</p>
 </div>
 
 {% endblock %}
