--- a/SeniorProject_v01/app/static/app/content/site.css
+++ b/SeniorProject_v01/app/static/app/content/site.css
@@ -9,7 +9,7 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
-    color: white;
+    color: black;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -57,6 +57,10 @@ input[type="checkbox"].input-validation-error {
 
 .container .jumbotron {
     padding: 0;
+}
+
+.alert-box {
+    padding: 2rem 0;
 }
 
 /*CALENDAR TABLES CSS*/
