--- a/SeniorProject_v01/app/templates/app/layout.html
+++ b/SeniorProject_v01/app/templates/app/layout.html
@@ -9,13 +9,12 @@
     <title>{{ title }} - OAF</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"  />    
     <!-- Bootstrap CSS and JS -->
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/headerlogin.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.4.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/headerlogin.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
-    
 
     {{ form.media }} <!-- needed for JS/GoogleMaps lookup from address package -->
 
@@ -120,7 +119,6 @@
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
-    <script src="{% static 'app/scripts/jquery.validate.min.js' %}"></script>
 
     {% load staticfiles %}
     {% block scripts %}
