Updated the layout.html navabar file.... Made it responsive.

--- a/SeniorProject_v01/app/static/app/content/headerlogin.css
+++ b/SeniorProject_v01/app/static/app/content/headerlogin.css
@@ -1,6 +1,11 @@
 body {
     background: url('../img/tlusa_homepage_cover2.jpg');
-    padding: 50px;
+    padding: 70px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
 }
 
 #login-dp {
