--- a/SeniorProject_v01/app/templates/app/layout.html
+++ b/SeniorProject_v01/app/templates/app/layout.html
@@ -24,80 +24,48 @@
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="/" class="navbar-brand">Online Adventure Finder</a>
-                <!-- VERTICAL SEPERATOR HERE ################################################################################ -->
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'home' %}"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="{% url 'events' %}"><i class="fa fa-calendar-alt"></i> Events</a></li>
-                    <li><a href="{% url 'search' %}"><i class="fas fa-search"></i> Search</a></li>
-                </ul>
-            </div>
-            
 
-                <!-------HEADER LOGIN---------->
-                {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %}" class="navbar-nav navbar-right"><b>Log Out</b> <span class="caret"></span></a>
-                    <a class="nav navbar-nav navbar-right"> Hi {{ user.username }}</a>
+    
+			<div class="navbar navbar-default navbar-fixed-top">
+				<div class="container-fluid">
+			  <!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+				  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				  </button>
+				  <a href="/" class="navbar-brand">Online Adventure Finder</a>
+				</div>
+				<!-- VERTICAL SEPERATOR HERE ################################################################################ -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+				  <li><a href="{% url 'home' %}"><i class="fas fa-home"></i> Home</a></li>
+				   <li><a href="{% url 'events' %}"><i class="fa fa-calendar-alt"></i> Events</a></li>
+					<li><a href="{% url 'search' %}"><i class="fas fa-search"></i> Search</a></li>
+				  </ul>
+               
+				<ul class="nav navbar-nav navbar-right">
+					 {% if user.is_authenticated %}
                     
-                {% else %}
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-			                        <ul id="login-dp" class="dropdown-menu">
-				                        <li>
-					                         <div class="row">
-							                        <div class="col-md-12">
-								                        Login via
-								                        <div class="social-buttons">
-									                        <a href="#" class="btn btn-primary btn-block btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-								                        </div>
-                                                        or
-								                         <form class="form" role="form" method="post" action="." id="login-nav">
-                                                                {% csrf_token %}
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" >Welcome, {{ user.username }}! </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/auth/logout"><i class="icon-off"></i> Logout</a></li>
+                        </ul>
+                    </li>
+               
+					<li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+					
+					{% else %}
 
-										                        <div class="form-group">
-											                         <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											                         {{ form.username }}
-
-										                        </div>
-										                        <div class="form-group">
-											                         <label class="sr-only" for="exampleInputPassword2">Password</label>
-											                         {{ form.password }}
-                                                                     <div class="help-block text-center"><a href="">Forget the password ?</a></div>
-										                        </div>
-										                        <div class="form-group">
-											                         <input type="submit" class="btn btn-primary btn-block">Sign in</input>
-                                                                    {% if form.errors %}
-                                                                    <p class="validation-summary-errors">Please enter a correct user name and password.</p>
-                                                                    {% endif %}
-										                        </div>
-										                            {% if form.errors %}
-                                                                    <p class="validation-summary-errors">Please enter a correct user name and password.</p>
-                                                                    {% endif %}
-								                         </form>
-							                        </div>
-							                        
-					                         </div>
-				                        </li>
-			                        </ul>
-                       
-                                </li>
-                        {% if form.errors %}
-                         <p class="validation-summary-errors">Please enter a correct user name and password.</p>
-                        {% endif %}
-                              </ul>
-                   {% endif %}
-                <!--------END Header Login-->
-            </div>
-        </div>
+					<li><a href="{% url 'register' %}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+					<li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    </ul>
+					{% endif %}
+			</div>			
+	    </div>
+                </div>
     <!-- END navbar -->
 
     <div class="container body-content">
