--- a/SeniorProject_v01/app/static/app/content/site.css
+++ b/SeniorProject_v01/app/static/app/content/site.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    background: url('../img/tlusa_homepage_cover2.jpg');
     padding-top: 70px;
     padding-bottom: 20px;
     background-size: cover;
