Calendar Updated Css

--- a/SeniorProject_v01/app/templates/app/login.html
+++ b/SeniorProject_v01/app/templates/app/login.html
@@ -34,7 +34,7 @@
 		        <div class="or-seperator"><i>or</i></div>
                 <p class="text-center">Login with your social media account</p>
                 <div class="text-center social-btn">
-                    <a href="#" class="btn btn-primary"><i class="fa fa-facebook"></i>&nbsp; Facebook</a>
+                    <a href="#" class="btn btn-primary"><i class="fab fa-facebook"></i>&nbsp; Facebook</a>
                 </div>
             </form>
 </div>
