--- a/SeniorProject_v01/app/static/app/content/headerlogin.css
+++ b/SeniorProject_v01/app/static/app/content/headerlogin.css
@@ -66,3 +66,10 @@
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     padding: 30px;
 }
+
+.btn-block {
+    width: 322px;
+    display: block;
+    padding-right: 0;
+    padding-left: 0;
+}
