search form shows every time and retains filters from search to search

--- a/SeniorProject_v01/app/templates/app/search.html
+++ b/SeniorProject_v01/app/templates/app/search.html
@@ -10,7 +10,7 @@
     </div>
 
     {% if user.is_authenticated %}
-        <form method="POST">
+        <form method="GET">
             {% csrf_token %}
             {{ filter.as_p }}
             <button class="searchbutton" type="submit">
