--- a/SeniorProject_v01/app/templates/app/index.html
+++ b/SeniorProject_v01/app/templates/app/index.html
@@ -6,28 +6,37 @@
 <div class="jumbotron">
     <h1>Welcome to the Trail Life USA<br />Online Adventure Finder</h1>
     {% if request.user.is_authenticated %}
-        <h2>Welcome back, {{ request.user.username }}</h2>
+        <p></p>
+        <h3>Welcome back, {{ request.user.username }}!</h3>
     {% else %}
+        <p></p>
         <p>You must be a registered user to access this site.<br />Please <a href="{% url 'login' %}">login</a> or <a href="{% url 'register' %}">register</a> to continue.</p>
     {% endif %}
 </div>
 
-<div class="card-deck">
-    <div class="card">
-        <i class="fa fa-calendar-alt fa-fw fa-10x card-img-top"></i>
-        <div class="card-body">
-            <h5 class="card-title">View Calender</h5>
-            <p class="card-text">See upcoming events for the current month. Events are listed by date.</p>
+<div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col">
+        <div class="card-deck">
+            <div class="card text-center">
+                <img class="card-img-top" src="{% static "app/img/calendar_01.jpg" %}" alt="Calendar">
+                <div class="card-body">
+                <h5 class="card-title">Calendar</h5>
+                <p class="card-text">See upcoming events for the current month. Events are listed by date.</p>
+                <a href="#" class="btn btn-primary">View Calendar</a>
+                </div>
+            </div>
+            <div class="card text-center">
+                <img class="card-img-top" src="{% static "app/img/search_01.jpg" %}" alt="Search">
+                <div class="card-body">
+                <h5 class="card-title">Find an Event</h5>
+                <p class="card-text">Looking for something in particular? Search for a specific event or filter by region, category, or date.</p>
+                <a href="#" class="btn btn-primary">Search </a>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="card">
-        <i class="fas fa-search fa-fw fa-10x card-img-top"></i>
-        <div class="card-body">
-            <h5 class="card-title">Search Events</h5>
-            <p class="card-text">Looking for something in particular? Search for a specific event or filter by region, category, or date.</p>
-        </div>
-    </div>
+    <div class="col-sm-1"></div>
 </div>
-
 
 {% endblock %}
