--- a/SeniorProject_v01/app/templates/app/search.html
+++ b/SeniorProject_v01/app/templates/app/search.html
@@ -4,27 +4,36 @@
 {% load truncatesmart %}
 
 {% block content %}
-<div class="col-xs-6 col-md-4">
-    <div class="row">
-        <h1>Search Events</h1>
-    </div>
 
-    {% if user.is_authenticated %}
+
+
+
+<div class="row">
+    <h1>Search</h1>
+</div>
+
+<div class="row">
+    {% if request.user.is_authenticated %}
+    <div class="col-md-4">
         <form method="GET">
             {% csrf_token %}
             {{ filter.as_p }}
-            <button class="searchbutton" type="submit">
-                <i class="fas fa-search"></i>
+            <button class="btn btn-primary" type="submit">
+                <i class="fas fa-search"></i> Search
             </button>
         </form>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-8">
-        <!-- display the calender -->
-        {{ month_table }}
+        <a href="search" class="btn btn-primary"><i class="fas fa-times-circle"></i> Reset Filters</a>
+    </div>
+    <div class="col-md-8">
+            <!-- display the calender -->
+            {{ month_table }}
+    </div>
 
-    <!-- else display error -->
+    <!-- default login display error -->
     {% else %}
+    <div class="row">
         {% include "app/authentication_error.html" %}
+    </div>
     {% endif %}
 </div>
 {% endblock %}
