--- a/SeniorProject_v01/app/templates/app/events.html
+++ b/SeniorProject_v01/app/templates/app/events.html
@@ -13,7 +13,7 @@
 
         <!-- else display error -->
         {% else %}
-            <div class="col-md-12"
+            <div class="col-md-12">
                 {% include "app/authentication_error.html" %}
             </div>
         {% endif %}
