--- a/SeniorProject_v01/app/templates/tempocal/month.html
+++ b/SeniorProject_v01/app/templates/tempocal/month.html
@@ -1,28 +1,27 @@
-
-
 <table class="calHeader" style="width:100%">
     <tbody>
         <tr>
             <td class="header-left">
                 <span class="header-title">
-                    
                 </span>
             </td>
             <td class="header-center">
-                
                     <h2>{{ month_name_row }}</h2>
-                
             </td>
             <td class="header-right">
-                <span class="button button-prev default corner-left" unselectable="on">
-                    <span class="left-arrow"><</span>
-                </span>
-                <span class="button button-next default corner-right" unselectable="on">
-                    <span class="right-arrow">></span>
-                </span>
+                <a href="/">
+                    <span class="button button-prev default corner-left" unselectable="on">
+                        <span class="left-arrow"><</span>
+                    </span>
+                </a>
+                <a href="/">
+                    <span class="button button-next default corner-right" unselectable="on">
+                        <span class="right-arrow">></span>
+                    </span>
+                </a>
             </td>
         </tr>
-    </tbody>            
+    </tbody>
     
 </table>
 <table class="month oafcal" style="width:100%" cellspacing="0">
