--- a/SeniorProject_v01/app/templates/app/authentication_error.html
+++ b/SeniorProject_v01/app/templates/app/authentication_error.html
@@ -1,6 +1,15 @@
-﻿<div class="alert-box">
+﻿<!--
+<div class="alert-box">
     <div class="alert alert-danger alert-dismissible fade in">
         <a href="login" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         <strong>Error!</strong> You are not authenticated. Please <a href="login" class="alert-link">login</a> to continue.
     </div>
+</div>
+-->
+
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <strong>Error!</strong> You are not authenticated. Please <a href="login" class="alert-link">login</a> to continue.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
