--- a/SeniorProject_v01/app/templates/app/login.html
+++ b/SeniorProject_v01/app/templates/app/login.html
@@ -4,39 +4,49 @@
 {% block content %}
 
 <div class="login-form">
-            <form action="." method="post" class="form-horizontal">
-                {% csrf_token %}
-                <h2 class="text-center">Sign in</h2>   
-                <div class="form-group">
-        	        <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                        {{ form.username }}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                        {{ form.password }}
-                    </div>
-                </div>
-                <div class="form-group">
-                        <input type="hidden" name="next" value="/" />
-                        <!---<input type="submit" value="Log in" class="btn btn-default" />-->
-                        <button type="submit" class="btn btn-primary login-btn btn-block">Sign in</button>
-                </div>
-                {% if form.errors %}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
-                {% endif %}
-                 <div class="clearfix">
-                    <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
-                    <a href="#" class="pull-right">Forgot Password?</a>
-                </div>
-		        <div class="or-seperator"><i>or</i></div>
-                <p class="text-center">Login with your social media account</p>
-                <div class="text-center social-btn">
-                    <a href="#" class="btn btn-primary"><i class="fab fa-facebook"></i>&nbsp; Facebook</a>
-                </div>
-            </form>
+    <form action="." method="post" class="form-horizontal">
+        {% csrf_token %}
+        <h2 class="text-center">Sign in</h2>
+
+
+
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.username }}
+        </div>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+            </div>
+            {{ form.password }}
+        </div>
+
+        <div class="form-group">
+                <input type="hidden" name="next" value="/" />
+                <!---<input type="submit" value="Log in" class="btn btn-default" />-->
+                <button type="submit" class="btn btn-primary login-btn btn-block">Sign in</button>
+        </div>
+
+        {% if form.errors %}
+            <p class="validation-summary-errors">Please enter a correct user name and password.</p>
+        {% endif %}
+
+        <div class="clearfix centered">
+            <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
+        </div>
+
+        <div class="clearfix centered">
+            <a href="#" class="pull-right">Forgot Password?</a>
+        </div>
+
+		<div class="or-seperator"><i>or</i></div>
+        <p class="text-center">Login with your social media account</p>
+        <div class="text-center social-btn">
+            <a href="#" class="btn btn-primary"><i class="fab fa-facebook-square"></i>&nbsp; Facebook</a>
+        </div>
+    </form>
 </div>
 
 {% endblock %}
