--- a/SeniorProject_v01/app/templates/tempocal/day.html
+++ b/SeniorProject_v01/app/templates/tempocal/day.html
@@ -8,11 +8,13 @@
                 <div class="day-content">
                     {% if events_str %}
                         <div class="event-inner">
-                        <span class="eventTitle">{{ events_str }}</span>
+                        <span class="eventTitle">
+                            {{ events_str }}
+                            </span>
                         </div>
                     {% else %}
                     {% endif %}
-                 </div>    
+                </div> 
     </div>
 </td>
 {% endautoescape %}
